--- a/mediaQuery.css
+++ b/mediaQuery.css
@@ -368,9 +368,30 @@
     margin-left: 25%;
   } */
 
-  .datascience-box-text{
-    margin-top: 90px !important;
+  .first-paragraph{
+    margin-right: 20px;
   }
+  .second-para{
+    margin-right: 40px;
+  }
+
+
+  .copy-rights-reserved-text{
+    font-size: 13px !important;
+  }
+
+  .copy-right{
+    font-size: 13px !important;
+  }
+
+  .block-chain-paragraph{
+     font-size: 15px !important;
+  }
+
+  .datascience-box-text{
+    margin-top: 130px !important;
+  }
+  
   .askpert-box-text{
     margin-top: 30px !important;
   }
@@ -494,8 +515,19 @@
     margin-left: 40px;
   } */
 
+   .first-paragraph p {
+    text-align: center !important;
+    font-size: 18px;
+  }
+
 }
 
+@media (max-width:430px) {
+   .first-paragraph p {
+    text-align: center !important;
+    font-size: 10px;
+  }
+}
 @media (max-width:769px) {
 
   /* .industry-cards {
@@ -520,11 +552,15 @@
   } */
 
 
-  .first-paragraph p {
-    text-align: center !important;
-    font-size: 14px;
+  .form-head{
+    font-size: 30px;
+    margin: 20px;
   }
 
+  .form-sub-head{
+    font-size: 20px;
+  }
+  
   .second-para{
     margin-left: 15px !important;
   }
@@ -1015,6 +1051,20 @@
   .input-style-messge{
     width: 96.5% !important;
   }
+  .first-paragraph{
+    font-size: 20px;
+  }
+}
+
+@media (max-width:1027px) {
+  .our-products-section{
+    margin-top: 30px;
+    margin-bottom: 40px;
+  }
+  .industry-cards{
+    margin-top: 70px;
+    margin-bottom: 70px !important;
+  }
 }
 
 @media (min-width: 1027px) and (max-width: 1366px) {
@@ -1029,6 +1079,12 @@
   }
   .input-style-messge{
     width: 88% !important;
+  }
+}
+
+@media (max-width:1450px) and (min-width:769px) {
+  .datascience-box-text{
+    margin-top: 120px !important;
   }
 }
 
